# aibak

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PRODUCT.md  README.md  fly.toml  generate_mme_paths.py  risk_territories.json
.github/workflows/: deploy.yml
boards/: big_earth_strategic.json  mme_strategic.json  se_strategic.json
crates/cli/: Cargo.toml
crates/cli/src/: ai.rs  display.rs  main.rs
crates/engine/: Cargo.toml
crates/engine/src/: ai.rs  analysis.rs  board.rs  cards.rs  combat.rs  fog.rs  game_analysis.rs  lib.rs  map.rs  mcts.rs  openings.rs  orders.rs  picking.rs  puzzle.rs  state.rs  turn.rs
crates/engine/tests/: integration.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs
crates/server/src/api/: feedback.rs  games.rs  ladder.rs  league.rs  lobby.rs  maps.rs  mod.rs  orders.rs  queue.rs  spectate.rs  tournament.rs
crates/server/src/auth/: discord.rs  mod.rs  session.rs
crates/server/src/db/: migrate.rs  mod.rs  schema.sql
crates/server/src/game/: achievements.rs  league.rs  manager.rs  matchmaking.rs  mod.rs  rating.rs  timer.rs  tournament.rs
crates/server/src/ws/: handler.rs  mod.rs
crates/static/: editor.html  feedback.html  game.html  games.html  history.html  index.html  ladder.html  landing.html  profile.html  puzzle.html  tutorial.html
docs/: API.md  GAME-DESIGN.md  product-roadmap.md  qa-report.md
maps/: big_earth.json  mme.json  small_earth.json
