[package]
name = "strat-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
strat-engine = { path = "../engine" }
axum = { version = "0.8", features = ["json", "ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
tracing-subscriber = "0.3"
